--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h3>❤️ ดูยูทูป</h3>
         </div>
     </div>
-    <a href="http://127.0.0.1:3000/6709650516_MyCSTUStory/Myfuture.html">My Future</a>
-    <a href="http://127.0.0.1:3000/6709650516_MyCSTUStory/Myjourney.html">My Journey</a>
+    <img class=gif1 src="resources/1f1c1745-c34d-49f0-9481-1c1e0c25e1a8.gif"><a href="http://127.0.0.1:3000/6709650516_MyCSTUStory/Myfuture.html">My Future</a>
+    <img class=gif2 src="resources/Howl no Ugoku Shiro.gif"><a href="http://127.0.0.1:3000/6709650516_MyCSTUStory/Myjourney.html">My Journey</a>
     </body>
 </html>
