--- a/Myjourney.html
+++ b/Myjourney.html
@@ -10,16 +10,16 @@
     <h1><center> MY JOURNEY 📒</h1></center> 
 
     <h2><marquee behavior="scroll" direction="up" scrollamount="1">Freshman🩷</marquee> </h2>
-        <p>ศึกษาพื้นฐานของการเขียนโปรแกรมภาษา HTML ,C ให้ชำนาญ และ ฝึกการแก้ปัญหาจากวิชา CS101 โดยการฝึกทำโจทย์ต่างๆ ในช่วงแรกอาจติดขัด หรือ พบปัญหาค่อนข้างบ่อย แต่ทุกปัญหาคือการฝึกให้เราสามารถก้าวต่อไปข้างหน้าได้</p>
+        <p>ศึกษาพื้นฐานของการเขียนโปรแกรมภาษา HTML ,C ให้ชำนาญ และ ฝึกการแก้ปัญหาจากวิชา CS101 โดยการฝึกทำโจทย์ต่างๆ ในช่วงแรกอาจติดขัด หรือ พบปัญหาค่อนข้างบ่อย แต่ทุกปัญหาคือการฝึกให้เราสามารถก้าวต่อไปข้างหน้าได้.</p>
 
     <h2><marquee behavior="scroll" direction="up" scrollamount="1">Sophomore 🩷🩵</marquee></h2>
-    <p>เริ่มเข้าสู่คำสั่งการเขียนโปรแกรมที่เฉพาะเจาะจงมากขึ้น อาจต้องมีการศึกษาเพิ่มเติมเยอะขึ้น และต้องหมั่นทำโจทย์ต่างๆให้สามารถแก้ปัญหาพื้นฐานที่ควรแก้ได้อย่างแม่นยำมากขึ้น </p>
+    <p>เริ่มเข้าสู่คำสั่งการเขียนโปรแกรมที่เฉพาะเจาะจงมากขึ้น อาจต้องมีการศึกษาเพิ่มเติมเยอะขึ้น และต้องหมั่นทำโจทย์ต่างๆให้สามารถแก้ปัญหาพื้นฐานที่ควรแก้ได้อย่างแม่นยำมากขึ้น. </p>
 
     <h2><marquee behavior="scroll" direction="up" scrollamount="1"> Junior🩷🩵🩶</marquee></h2>
-    <p>เริ่มศึกษาเกี่ยวกับการไปฝึกสหกิจ ค้นคว้าถึงบริษัทต่างๆที่มาเข้าร่วมกับสหกิจ เพื่อเตรียมพร้อมสำหรับการไปฝึกงานในแผนกที่เปิดรับนักศึกษาฝึกงาน</p>
+    <p>เริ่มศึกษาเกี่ยวกับการไปฝึกสหกิจ ค้นคว้าถึงบริษัทต่างๆที่มาเข้าร่วมกับสหกิจ เพื่อเตรียมพร้อมสำหรับการไปฝึกงานในแผนกที่เปิดรับนักศึกษาฝึกงาน.</p>
 
     <h2><marquee behavior="scroll" direction="up" scrollamount="1">Senior🩷🩵🩶🖤</marquee></h2>
-    <p>วางแผนการสมัครงาน หาบริษัทที่สนใจ เตรียมเอกสารการสมัครงาน ฝึกโจทย์การแก้ปัญหาต่างๆ ฝึกการเรียบเรียงความคิดและอธิบายทุกอย่างให้เป็นระบบมากยิ่งขึ้น </p>
+    <p>วางแผนการสมัครงาน หาบริษัทที่สนใจ เตรียมเอกสารการสมัครงาน ฝึกโจทย์การแก้ปัญหาต่างๆ ฝึกการเรียบเรียงความคิดและอธิบายทุกอย่างให้เป็นระบบมากยิ่งขึ้น.</p>
 
 
     <img class=fr src="resources/࿐ ࿔__･ﾟ 𝐩𝐞𝐫 𝐚𝐬𝐩𝐞𝐫𝐚 𝐚𝐝 𝐚𝐬𝐭𝐫𝐚 ✧˖_° _ Notion.gif"></img>
@@ -28,6 +28,5 @@
     <audio controls>
         <source src="resources/lofi-song-backyard.mp3" type="audio/ogg">
         </audio>
-
 </body>
 </html>
