--- a/Myjourney.html
+++ b/Myjourney.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Journey</title>
-    <link rel="stylesheet" href="myjourneystyles.css"></link>
+    <link rel="stylesheet" href="myjourstyles.css"></link>
 </head>
 <body> 
     <h1><center> MY JOURNEY 📒</h1></center> 
